--- a/src/app/views/acs/index.njk
+++ b/src/app/views/acs/index.njk
@@ -27,7 +27,7 @@
                 {{ filterCompanyName(filters) }}
                 {{ filterExportPotential(filters) }}
                 {{ filterCommodityCode({}) }}
-                {{ filterLatestExportEvidence({}) }}
+                {{ filterLatestExportEvidence(filters) }}
                 {{ filterSicCodes({}) }}
                 {{ filterTurnover(filters) }}
                 {{ filterMarketOfInterest(filters) }}
