--- a/src/app/components/filter-commodity-code/template.njk
+++ b/src/app/components/filter-commodity-code/template.njk
@@ -7,6 +7,7 @@
             classes: "govuk-!-font-weight-bold app-filter-label"
         },
         id: "commodity-code",
-        name: "commodity-code"
+        name: "commodity-code",
+        value: params.commodityCode
     }) }}
 </div>
