--- a/src/app/views/acs/index.njk
+++ b/src/app/views/acs/index.njk
@@ -26,7 +26,7 @@
             <form action="/acs/">
                 {{ filterCompanyName(filters) }}
                 {{ filterExportPotential(filters) }}
-                {{ filterCommodityCode({}) }}
+                {{ filterCommodityCode(filters) }}
                 {{ filterLatestExportEvidence(filters) }}
                 {{ filterSicCodes({}) }}
                 {{ filterTurnover(filters) }}
