DST-862 - Implement SIC code functionality for filtering with a single string with a numerical value

--- a/src/app/views/acs/index.njk
+++ b/src/app/views/acs/index.njk
@@ -28,7 +28,7 @@
                 {{ filterExportPotential(filters) }}
                 {{ filterCommodityCode(filters) }}
                 {{ filterLatestExportEvidence(filters) }}
-                {{ filterSicCodes({}) }}
+                {{ filterSicCodes(filters) }}
                 {{ filterTurnover(filters) }}
                 {{ filterMarketOfInterest(filters) }}
                 {{ filterMarketExportedTo(filters) }}
