--- a/src/app/components/filter-sic-codes/template.njk
+++ b/src/app/components/filter-sic-codes/template.njk
@@ -7,6 +7,7 @@
             classes: "govuk-!-font-weight-bold app-filter-label"
         },
         id: "sic-codes",
-        name: "sic-codes"
+        name: "sic-codes",
+        value:params.sicCodes
     }) }}
 </div>
