--- a/src/app/components/render-collection/template.njk
+++ b/src/app/components/render-collection/template.njk
@@ -36,7 +36,8 @@
 
                         {% for item in value %}
                             {% if item.checked %}
-                                <span class="govuk-!-font-size-16 govuk-!-font-weight-bold">{{ item.text }}</span>
+                                <span class="govuk-!-font-size-16 govuk-!-font-weight-bold">{{ key | lowerCase | startCase}}:</span>
+                                <span class="govuk-!-font-size-16 govuk-!-font-weight-bold">{{ item.text }},</span>
                             {% endif %}
                         {% endfor %}
 
