--- a/src/app/components/render-collection/render-collection.scss
+++ b/src/app/components/render-collection/render-collection.scss
@@ -45,6 +45,38 @@
 }
 
 
+.app-filters-tags-title-value {
+  display: inline-block;
+  position: relative;
+  margin-right: 8px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  padding: 0 8px;
+  background: #f8f8f8;
+  
+}
+
+.app-filters-tags-title {
+  position: relative;
+  color: #6f777b;
+}
+
+
+.app-filters-tags-value {
+  position: relative;
+  font-weight: bold;
+
+}
+
+.govuk-details__summary-text {
+  display: inline-block;
+  position: relative;
+  margin-bottom: 5px;
+  padding-left: 0px;
+  color: #005ea5;
+
+}
+
 
 
 
