--- a/src/app/components/filter-commodity-code/template.njk
+++ b/src/app/components/filter-commodity-code/template.njk
@@ -1,11 +1,16 @@
 {% from "input/macro.njk" import govukInput %}
+{% from "details/macro.njk" import govukDetails %}
+{% from "label/macro.njk" import govukLabel %}
 
-<div class="govuk-form-group app-filter-group-heading">
-    {{ govukInput({
-        label: {
+<div class="govuk-form-group app-filter-group-heading style="padding-top:10px">
+    {{ govukLabel({
             text: "Commodity code",
             classes: "govuk-!-font-weight-bold app-filter-label"
-        },
+    }) }}
+
+    <a href="https://www.trade-tariff.service.gov.uk/trade-tariff/sections?day=14&month=8&year=2018" target="_blank" class="govuk-link app-filter-external-link"> Do you know your commodity code?</a>
+  
+    {{ govukInput({
         id: "commodity-code",
         name: "commodity-code"
     }) }}
