--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -3617,6 +3617,11 @@
   font-size: 16px;
   padding-top: 11px; }
 
+.app-filter-external-link {
+  font-size: 16px;
+  display: block;
+  margin-bottom: 10px; }
+
 .app-filter-group-heading {
   background-color: #dee0e2;
   padding: 10px; }
@@ -3652,5 +3657,29 @@
 
 .app-large-section-break {
   border-bottom: 5px solid #0b0c0c; }
+
+.app-filters-tags-title-value {
+  display: inline-block;
+  position: relative;
+  margin-right: 8px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  padding: 0 8px;
+  background: #f8f8f8; }
+
+.app-filters-tags-title {
+  position: relative;
+  color: #6f777b; }
+
+.app-filters-tags-value {
+  position: relative;
+  font-weight: bold; }
+
+.govuk-details__summary-text {
+  display: block;
+  position: relative;
+  margin-bottom: 5px;
+  padding-left: 0px;
+  color: #005ea5; }
 
 /*# sourceMappingURL=styles.css.map */
