updated filter summary and changed app name to Find Exporters

--- a/src/app/components/filter-commodity-code/template.njk
+++ b/src/app/components/filter-commodity-code/template.njk
@@ -2,7 +2,7 @@
 {% from "details/macro.njk" import govukDetails %}
 {% from "label/macro.njk" import govukLabel %}
 
-<div class="govuk-form-group app-filter-group-heading style="padding-top:10px">
+<div class="govuk-form-group app-filter-group-heading">
     {{ govukLabel({
             text: "Commodity code",
             classes: "govuk-!-font-weight-bold app-filter-label"
