--- a/src/app/components/filter-export-potential/template.njk
+++ b/src/app/components/filter-export-potential/template.njk
@@ -20,7 +20,7 @@
                         <p class='app-filter-label'><span class='govuk-body govuk-!-font-weight-bold app-filter-heading'>High:</span> This business shares some features with successful exporters</p>
                     </li>
                     <li>
-                        <p class='app-filter-label'><span class='govuk-body govuk-!-font-weight-bold app-filter-heading'>Medium:</span> Some buinesses that look like this one do export, while some others don't</p>
+                        <p class='app-filter-label'><span class='govuk-body govuk-!-font-weight-bold app-filter-heading'>Medium:</span> Some businesses that look like this one do export, while some others don't</p>
                     </li>
                     <li>
                         <p class='app-filter-label'><span class='govuk-body govuk-!-font-weight-bold app-filter-heading'>Low:</span> This business shares many features with companies that do not export</p>
