--- a/src/public/scss/utilities.scss
+++ b/src/public/scss/utilities.scss
@@ -17,7 +17,12 @@
 
 .app-filter-external-link {
   font-size: 16px;
-  display: block; 
+  display: block;
   margin-bottom: 10px;
 }
+
+.app-button-submit {
+  width: 100%;
+}
+
 
