--- a/src/app/components/render-collection/template.njk
+++ b/src/app/components/render-collection/template.njk
@@ -27,23 +27,16 @@
                             {% if value|isString %}
                                 <div class="app-filters-tags-title-value">
                                     <span class="app-filters-tags-title">{{ key | lowerCase | startCase}}:</span>
-                                    <span class="app-filters-tags-title">{{ value }}</span>
+                                    <span class="app-filters-tags-value">{{ value }}</span>
                                 </div>
                             {% endif %}
 
                             {% if key == 'turnover' %}
                                 <div class="app-filters-tags-title-value">
                                     <span class="app-filters-tags-title">Turnover:</span>
-                                    <span class="app-filters-tags-title">min {{ value.min }}, max: {{ value.max }}</span>
+                                    <span class="app-filters-tags-value">min {{ value.min }}, max: {{ value.max }}</span>
                                 </div>
                             {% endif %}
-
-                            {% for item in value %}
-                                {% if item.checked %}
-                                    <span style="color: red" class="govuk-!-font-size-16 govuk-!-font-weight-bold">{{ item.text }}</span>
-                                {% endif %}
-                            {% endfor %}
-
 
                             {% if key == 'latestExport' %}
                                 <div class="app-filters-tags-title-value">
@@ -68,41 +61,7 @@
             <hr class="govuk-section-break govuk-section-break--visible app-large-section-break">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-one-half">
-                    <span class="govuk-caption-m govuk-!-margin-top-5">Page {{ pagination.currentPage }} of {{ pagination.totalPages }}</span>
-                </div>
-                <div class="govuk-grid-column-one-half govuk-!-margin-top-3 govuk-!-margin-bottom-3">
-                    <form method="" action="">
-                        <div class="app-form-group-no-margin app-pull-right">
-                            {{ govukSelect({
-                                id: "sort",
-                                name: "sort",
-                                classes: 'govuk-!-display-inline app-sort-select',
-                                label: {
-                                    text: "Sort by",
-                                    classes: 'govuk-!-display-inline govuk-!-margin-right-2'
-                                },
-                                items: [
-                                    {
-                                        value: "published",
-                                        text: "Recently published"
-                                    },
-                                    {
-                                        value: "updated",
-                                        text: "Recently updated",
-                                        selected: true
-                                    },
-                                    {
-                                        value: "views",
-                                        text: "Most views"
-                                    },
-                                    {
-                                        value: "comments",
-                                        text: "Most comments"
-                                    }
-                                ]
-                            }) }}
-                        </div>
-                    </form>
+                    <span class="govuk-caption-m govuk-!-margin-top-2 govuk-!-margin-bottom-2">Page {{ pagination.currentPage }} of {{ pagination.totalPages }}</span>
                 </div>
             </div>
             <hr class="govuk-section-break govuk-section-break--visible">
