--- a/src/app/views/_generic.njk
+++ b/src/app/views/_generic.njk
@@ -2,7 +2,7 @@
 
 {% set htmlClasses = "app-no-canvas-background" %}
 
-{% block pageTitle %}DS - Prospects{% endblock %}
+{% block pageTitle %}DS - Find Exporters{% endblock %}
 
 {% block head %}
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
