--- a/src/app/views/acs/index.njk
+++ b/src/app/views/acs/index.njk
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block content %}
-    <h1 class="govuk-heading-l">Prospects</h1>
+    <h1 class="govuk-heading-l">Find Exporters</h1>
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-one-third">
             <form action="/acs/">
@@ -34,7 +34,7 @@
                 {{ filterMarketExportedTo(filters) }}
                 {{ filterServiceUsed(filters) }}
                 {{ filterUkRegions(filters) }}
-                <button class="govuk-button" type="submit">Refresh results</button>
+                <button class="govuk-button app-button-submit" type="submit">Refresh results</button>
             </form>
         </div>
 
