--- a/src/app/views/acs/index.njk
+++ b/src/app/views/acs/index.njk
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block content %}
-    <h1 class="govuk-heading-l">Find Exporters</h1>
+    <h1 class="govuk-heading-l">Find an exporter</h1>
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-one-third">
             <form action="/acs/">
