DST-1106 DST-982 - Solved date transfromation and added link to google logic

--- a/src/app/components/render-collection/template.njk
+++ b/src/app/components/render-collection/template.njk
@@ -99,10 +99,15 @@
                         {% endif %}
                         <div class="govuk-grid-column-full">
                             {% if item.datahub_company_id %}
-                                <a class="govuk-link"
+                                <a class="govuk-link app-collection-link"
                                    target="_blank"
                                    href="https://www.datahub.trade.gov.uk/companies/{{ item.datahub_company_id }}"
                                 >View Data Hub profile</a>
+                            {% else %}
+                                <a class="gov-link app-collection-link"
+                                   target="_blank"
+                                   href="https://www.google.co.uk/search?q={{ item.company_name | urlencode }}+{{item.postcode}}"
+                                > View company in Google search </a>
                             {% endif %}
 
                             {% if item.export_propensity  %}
