--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -3746,4 +3746,7 @@
   margin: 0 15px;
   font-weight: bold; }
 
+.app-collection-link {
+  font-size: 16px; }
+
 /*# sourceMappingURL=styles.css.map */
