DST-1110 Removed /acs url and legacy logic from the prototype, also updated the app header to specify data hub instead of gov.uk

--- a/src/app/components/filter-commodity-code/template.njk
+++ b/src/app/components/filter-commodity-code/template.njk
@@ -12,7 +12,7 @@
   
     {{ govukInput({
         id: "commodity-code",
-        name: "commodity-code",
+        name: "export-codes",
         value: params.commodityCode
     }) }}
 </div>
