--- a/src/app/components/render-collection/template.njk
+++ b/src/app/components/render-collection/template.njk
@@ -17,7 +17,7 @@
                     </p>
                 </div>
                 <div class="govuk-grid-column-one-half">
-                    <a class="govuk-link app-pull-right govuk-!-margin-top-3" href="/acs/">Remove all filters</a>
+                    <a class="govuk-link app-pull-right govuk-!-margin-top-3" href="/">Remove all filters</a>
                 </div>
 
                      
