--- a/src/app/views/index.njk
+++ b/src/app/views/index.njk
@@ -1,15 +1,42 @@
-{% extends 'layout.njk' %}
-{% set pageName='Homepage' %}
-{% block page_content %}
-Welcome to the Data Hub Labs.
+{% from "filter-company-name/macro.njk" import filterCompanyName %}
+{% from "filter-commodity-code/macro.njk" import filterCommodityCode %}
+{% from "filter-sic-codes/macro.njk" import filterSicCodes %}
+{% from "filter-turnover/macro.njk" import filterTurnover %}
+{% from "filter-export-potential/macro.njk" import filterExportPotential %}
+{% from "filter-service-used/macro.njk" import filterServiceUsed %}
+{% from "filter-uk-regions/macro.njk" import filterUkRegions %}
+{% from "filter-market-of-interest/macro.njk" import filterMarketOfInterest %}
+{% from "filter-market-exported-to/macro.njk" import filterMarketExportedTo %}
+{% from "filter-latest-export-evidence/macro.njk" import filterLatestExportEvidence %}
+{% from "render-collection/macro.njk" import renderCollection %}
 
-Choose the service you would like to use:
-<ul>
-	<li>
-		<a href="/timeline/">Company Timeline</a>
-	</li>
-	<li>
-		<a href="/acs/">Company Finder</a>
-	</li>
-</ul>
+{% extends "layout.njk" %}
+
+{% block content %}
+    <h1 class="govuk-heading-l">Find Exporters</h1>
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-one-third">
+            <form action="/">
+                {{ filterCompanyName(filters) }}
+                {{ filterExportPotential(filters) }}
+                {{ filterCommodityCode(filters) }}
+                {{ filterLatestExportEvidence(filters) }}
+                {{ filterSicCodes(filters) }}
+                {{ filterTurnover(filters) }}
+                {{ filterMarketOfInterest(filters) }}
+                {{ filterMarketExportedTo(filters) }}
+                {{ filterServiceUsed(filters) }}
+                {{ filterUkRegions(filters) }}
+                <button class="govuk-button app-button-submit" type="submit">Refresh results</button>
+            </form>
+        </div>
+
+        <div class="govuk-grid-column-two-thirds">
+            {{ renderCollection({
+                count: count,
+                data: result,
+                filters: filters
+            }) }}
+        </div>
+    </div>
 {% endblock %}
