--- a/src/app/views/template.njk
+++ b/src/app/views/template.njk
@@ -38,11 +38,26 @@
 {% endblock %}
 
 {% block header %}
-    {{ govukHeader({
-        homepageUrl: 'https://www.datahub.trade.gov.uk',
-        serviceName: "Find Exporters",
-        serviceUrl: "https://www.datahub.trade.gov.uk/"
-    }) }}
+    <header class="govuk-header " role="banner" data-module="header">
+        <div class="govuk-header__container govuk-width-container">
+
+            <div class="govuk-header__logo">
+                <a href="https://www.datahub.trade.gov.uk" class="govuk-header__link govuk-header__link--homepage">
+                    <span class="govuk-header__logotype">
+                      <span class="govuk-header__logotype-text">
+                        Data Hub
+                      </span>
+                    </span>
+                </a>
+            </div>
+            <div class="govuk-header__content">
+                <a href="/" class="govuk-header__link govuk-header__link--service-name">
+                    Find Exporters
+                </a>
+            </div>
+
+        </div>
+    </header>
 {% endblock %}
 
 {% block main %}
@@ -51,7 +66,7 @@
             tag: {
                 text: "beta"
             },
-            html: 'This is a new service - your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+            html: 'This is a new service - your <a class="govuk-link" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSc-H72Kx9azBV4NvVTn-EmQ867gAZsVQ0UWEIpmD7Njcpm4BQ/viewform">feedback</a> will help us to improve it.'
         }) }}
         {% block beforeContent %}{% endblock %}
         <main class="govuk-main-wrapper {{ mainClasses }}" id="main-content" role="main">
