added algorithm disclaimer

--- a/src/app/components/filter-export-potential/template.njk
+++ b/src/app/components/filter-export-potential/template.njk
@@ -12,6 +12,7 @@
             summaryText: "What is export potential?",
             classes: "app-filter-group-details app-filter-label",
             html: "
+                <p class='app-filter-label'><small>This tool provides export potential scores for companies. The results are produced by an algorithm that uses machine learning. The algorithm is a work in progress that learns mostly using data of exporters of goods so it is more accurate in that area. We are continuing to improve the algorithm so, please do share your <a class='govuk-link' target='_blank'  href='https://docs.google.com/forms/d/e/1FAIpQLSc-H72Kx9azBV4NvVTn-EmQ867gAZsVQ0UWEIpmD7Njcpm4BQ/viewform'>feedback</a>.</small></p>
                 <ul class='govuk-list'>
                     <li>
                         <p class='app-filter-label'><span class='govuk-body govuk-!-font-weight-bold app-filter-label'>Very High:</span> Most of the businesses with common features to this one are exporters</p>
