--- a/src/app/components/render-collection/template.njk
+++ b/src/app/components/render-collection/template.njk
@@ -178,7 +178,7 @@
             {% endfor %}
         {% else %}
             <h1> Error </h1>
-            <h1> There are no results for your search, please check your parameters and try again <h1>
+            <p> There are no results for your search, please check your parameters and try again </p>
         {% endif %}
         </ol>
         <nav class="app-pagination" aria-label="pagination: total {{ pagination.totalPages }} pages">
