--- a/src/app/views/_generic.njk
+++ b/src/app/views/_generic.njk
@@ -26,7 +26,8 @@
 
 {% block bodyEnd %}
     <!-- build:js(src) /public/js/all.min.js -->
-        <script src="/public/js/all.js"></script>
+        <script src="/public/js/lib/govuk-design-system-all.js"></script>
+        <script src="/public/js/app.js"></script>
     <!-- endbuild -->
 
     <script>window.GOVUKFrontend.initAll()</script>
