--- a/src/app/views/index.njk
+++ b/src/app/views/index.njk
@@ -16,7 +16,7 @@
     <h1 class="govuk-heading-l">Find Exporters</h1>
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-one-third">
-            <form action="/">
+            <form action="/" class="js-auto-submit">
                 {{ filterCompanyName(filters) }}
                 {{ filterExportPotential(filters) }}
                 {{ filterCommodityCode(filters) }}
@@ -27,7 +27,7 @@
                 {{ filterMarketExportedTo(filters) }}
                 {{ filterServiceUsed(filters) }}
                 {{ filterUkRegions(filters) }}
-                <button class="govuk-button app-button-submit" type="submit">Refresh results</button>
+                <button class="govuk-button app-button-submit app-js-hidden" type="submit">Refresh results</button>
             </form>
         </div>
 
