--- a/src/public/scss/utilities.scss
+++ b/src/public/scss/utilities.scss
@@ -31,6 +31,29 @@
   }
 }
 
-body {
-  background: purple;
+.u-loading {
+  &::before {
+    animation: growRight 3s;
+    content: "";
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 10;
+    border-top: 2px solid  $govuk-link-hover-colour;
+  }
 }
+
+@keyframes growRight {
+  0% {
+    right: 100%;
+  }
+  20% {
+    right: 60%;
+  }
+  100% {
+    right: 0;
+  }
+}
+
+
