--- a/src/app/views/_generic.njk
+++ b/src/app/views/_generic.njk
@@ -1,4 +1,8 @@
-{% extends "template.njk" %}
+{% if IS_XHR %}
+    {% extends "xhr.njk" %}
+{% else %}
+    {% extends "template.njk" %}
+{% endif %}
 
 {% set htmlClasses = "app-no-canvas-background" %}
 
@@ -9,7 +13,7 @@
     <!--[if !IE 8]><!-->
     <!-- build:css(src) /public/css/styles.min.css -->
         <base href="/">
-        <link rel="stylesheet" href="/public/css/styles.css">
+        <link rel="stylesheet" href="/public/dist/css/styles.css">
     <!-- endbuild -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/themes/prism.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/prism.min.js"></script>
@@ -27,7 +31,7 @@
 {% block bodyEnd %}
     <!-- build:js(src) /public/js/all.min.js -->
         <script src="/public/js/lib/govuk-design-system-all.js"></script>
-        <script src="{{ getAssetPath('app.js') }}"></script>
+        <script src="/public/dist/js/app.js"></script>
     <!-- endbuild -->
 
     <script>window.GOVUKFrontend.initAll()</script>
