--- a/src/app/views/template.njk
+++ b/src/app/views/template.njk
@@ -27,7 +27,7 @@
     <meta property="og:image" content="{{ assetUrl | default('/assets') }}/images/govuk-opengraph-image.png">
 </head>
 <body class="govuk-template__body {{ bodyClasses }}">
-<script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
+<script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : '');</script>
 {% block bodyStart %}{% endblock %}
 
 {% block skipLink %}
