Create Typeahead filter for Markets
Markets filters have about 200 entities each, in order to improve usability
a typeahead is needed.

* Create a reusable Vue component
* Create API endpoints fro the markets metadata
* Replace the existing filter with the vue one, keeping the intiial one as a fallback when no javascript enabled

--- a/src/app/components/filter-market-of-interest/template.njk
+++ b/src/app/components/filter-market-of-interest/template.njk
@@ -2,26 +2,32 @@
 {% from "label/macro.njk" import govukLabel %}
 {% from "input/macro.njk" import govukInput %}
 
-<div class="govuk-form-group">
-    <div class=" app-filter-group-heading">
-        {{ govukLabel({
-            text: "Market of interest",
-            classes: "govuk-!-font-weight-bold app-filter-label"
-        }) }}
+<checkbox-typeahead
+        filter-name="{{'market-of-interest'}}"
+        filter-title="{{'Market of interest'}}"
+        id="{{'market-of-interest'}}"
+></checkbox-typeahead>
+<noscript>
+    <div class="govuk-form-group">
+        <div class=" app-filter-group-heading">
+            {{ govukLabel({
+                text: "Market of interest",
+                classes: "govuk-!-font-weight-bold app-filter-label"
+            }) }}
 
-       
 
+
+        </div>
+        <div class="app-filter-group-list ">
+            {{ govukCheckboxes({
+                idPrefix: "market-of-interest",
+                name: "market-of-interest",
+                classes: "app-filter-checkboxes-group",
+                items: params.marketOfInterest
+            }) }}
+        </div>
     </div>
-    <div class="app-filter-group-list ">
-        {{ govukCheckboxes({
-            idPrefix: "market-of-interest",
-            name: "market-of-interest",
-            classes: "app-filter-checkboxes-group",
-            items: params.marketOfInterest
-        }) }}
-    </div>
-</div>
-
+</noscript>
 
 
 
