--- a/src/app/components/filter-market-of-interest/template.njk
+++ b/src/app/components/filter-market-of-interest/template.njk
@@ -5,6 +5,7 @@
 <checkbox-typeahead
         filter-name="{{'market-of-interest'}}"
         filter-title="{{'Market of interest'}}"
+        id="{{'market-of-interest'}}"
 ></checkbox-typeahead>
 <noscript>
     <div class="govuk-form-group">
