--- a/src/app/components/filter-market-of-interest/template.njk
+++ b/src/app/components/filter-market-of-interest/template.njk
@@ -2,32 +2,32 @@
 {% from "label/macro.njk" import govukLabel %}
 {% from "input/macro.njk" import govukInput %}
 
-<checkbox-typeahead
-        filter-name="{{'market-of-interest'}}"
-        filter-title="{{'Market of interest'}}"
-        id="{{'market-of-interest'}}"
-></checkbox-typeahead>
-<noscript>
-    <div class="govuk-form-group">
-        <div class=" app-filter-group-heading">
-            {{ govukLabel({
-                text: "Market of interest",
-                classes: "govuk-!-font-weight-bold app-filter-label"
-            }) }}
+<div class="govuk-form-group js-checkbox-typeahead">
+    <div class=" app-filter-group-heading">
+        {{ govukLabel({
+            text: "Market of interest",
+            classes: "govuk-!-font-weight-bold app-filter-label"
+        }) }}
 
-
-
-        </div>
-        <div class="app-filter-group-list ">
-            {{ govukCheckboxes({
-                idPrefix: "market-of-interest",
-                name: "market-of-interest",
-                classes: "app-filter-checkboxes-group",
-                items: params.marketOfInterest
-            }) }}
-        </div>
+        {{ govukInput({
+            label: {
+                text: "Search for country"
+            },
+            classes: "js-checkbox-typeahead-input",
+            id: "search-for-country",
+            name: "search-for-country"
+        }) }}
     </div>
-</noscript>
+    <div class="app-filter-group-list ">
+        {{ govukCheckboxes({
+            idPrefix: "market-of-interest",
+            name: "market-of-interest",
+            classes: "app-filter-checkboxes-group",
+            items: params.marketOfInterest
+        }) }}
+    </div>
+</div>
+
 
 
 
